Se agrega la version de consola, se realiza mejora en el archivo diseño y codificacion.

--- a/src/view/metFactoriales_view.html
+++ b/src/view/metFactoriales_view.html
@@ -30,11 +30,11 @@
                             <div class="mb-4">
                                 <label for="operacion" class="form-label">Seleccione una operación:</label>
                                 <select id="operacion" name="operacion" class="form-select">
-                                    <option value="exp">e^x</option>
+                                    <option value="exponente">e^x</option>
                                     <option value="sen">sen(x)</option>
                                     <option value="cos">cos(x)</option>
                                     <option value="arcsen">arcsen(x)</option>
-                                    <option value="arccos">arccos(x)</option>
+                                    <option value="cosenohiperbolico">arccos(x)</option>
                                     <option value="senh">senh(x)</option>
                                     <option value="cosh">cosh(x)</option>
                                 </select>
